Fix #308: Duplicate existing fluid translations so they also cover fluid blocks

--- a/src/main/resources/assets/bigreactors/lang/de_DE.lang
+++ b/src/main/resources/assets/bigreactors/lang/de_DE.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Eimer mit flüssigem Yellorium
 fluid.tile.water=Wasser
 fluid.tile.lava=Lava
 fluid.tile.yellorium=Flüssiges Yellorium
+tile.fluid.yellorium.still.name=Flüssiges Yellorium
 fluid.tile.cyanite=Flüssiges Cyanit
+tile.fluid.cyanite.still.name=Flüssiges Cyanit
 fluid.tile.blutonium=Flüssiges Blutonium
+tile.fluid.blutonium.still.name=Flüssiges Blutonium
 fluid.steam=Dampf
