--- a/src/main/resources/assets/bigreactors/lang/es_SP.lang
+++ b/src/main/resources/assets/bigreactors/lang/es_SP.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Cubo de Yelorio Liquido
 fluid.tile.water=Agua
 fluid.tile.lava=Lava
 fluid.tile.yellorium=Yelorio Liquido
+tile.fluid.yellorium.still.name=Yelorio Liquido
 fluid.tile.cyanite=Cyanite Liquido
+tile.fluid.cyanite.still.name=Cyanite Liquido
 fluid.tile.blutonium=Blutonio Liquido
+tile.fluid.blutonium.still.name=Blutonio Liquido
 fluid.steam=Vapor
