--- a/src/main/resources/assets/bigreactors/lang/ko_KR.lang
+++ b/src/main/resources/assets/bigreactors/lang/ko_KR.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=액체 옐로리움 양동이
 fluid.tile.water=물
 fluid.tile.lava=용암
 fluid.tile.yellorium=액체 옐로리움
+tile.fluid.yellorium.still.name=액체 옐로리움
 fluid.tile.cyanite=액체 싸이언이트
+tile.fluid.cyanite.still.name=액체 싸이언이트
 fluid.tile.blutonium=액체 블루토니움
+tile.fluid.blutonium.still.name=액체 블루토니움
 fluid.steam=증기
