--- a/src/main/resources/assets/bigreactors/lang/nl_NL.lang
+++ b/src/main/resources/assets/bigreactors/lang/nl_NL.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Emmer Vloeibaar Gelium
 fluid.tile.water=Water
 fluid.tile.lava=Lava
 fluid.tile.yellorium=Vloeibaar Gelium
+tile.fluid.yellorium.still.name=Vloeibaar Gelium
 fluid.tile.cyanite=Vloeibaar Cyanide
+tile.fluid.cyanite.still.name=Vloeibaar Cyanide
 fluid.tile.blutonium=Vloeibaar Blautonium
+tile.fluid.blutonium.still.name=Vloeibaar Blautonium
 fluid.steam=Stoom
