--- a/src/main/resources/assets/bigreactors/lang/pl_PL.lang
+++ b/src/main/resources/assets/bigreactors/lang/pl_PL.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Wiaderko ciekłego Yellorium
 fluid.tile.water=Woda
 fluid.tile.lava=Lawa
 fluid.tile.yellorium=Ciekłe Yellorium
+tile.fluid.yellorium.still.name=Ciekłe Yellorium
 fluid.tile.cyanite=Ciekły Cyanit
+tile.fluid.cyanite.still.name=Ciekły Cyanit
 fluid.tile.blutonium=Ciekłe Blutonium
+tile.fluid.blutonium.still.name=Ciekłe Blutonium
 fluid.steam=Para
