--- a/src/main/resources/assets/bigreactors/lang/pt_BR.lang
+++ b/src/main/resources/assets/bigreactors/lang/pt_BR.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Balde do Fluído de Yellorium
 fluid.tile.water=Água
 fluid.tile.lava=Lava
 fluid.tile.yellorium=Fluído de Yellorium
+tile.fluid.yellorium.still.name=Fluído de Yellorium
 fluid.tile.cyanite=Fluído de Cyanite
+tile.fluid.cyanite.still.name=Fluído de Cyanite
 fluid.tile.blutonium=Fluído de Blutonium
+tile.fluid.blutonium.still.name=Fluído de Blutonium
 fluid.steam=Vapor
