--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Ведро йеллориума
 fluid.tile.water=Вода
 fluid.tile.lava=Лава
 fluid.tile.yellorium=Жидкий йеллориум
+tile.fluid.yellorium.still.name=Жидкий йеллориум
 fluid.tile.cyanite=Жидкий цианит
+tile.fluid.cyanite.still.name=Жидкий цианит
 fluid.tile.blutonium=Жидкий блутоний
+tile.fluid.blutonium.still.name=Жидкий блутоний
 fluid.steam=Пар
