--- a/src/main/resources/assets/bigreactors/lang/sv_SE.lang
+++ b/src/main/resources/assets/bigreactors/lang/sv_SE.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=Flytande Yellorium Hink
 fluid.tile.water=Vatten
 fluid.tile.lava=Lava
 fluid.tile.yellorium=Flytande Yellorium
+tile.fluid.yellorium.still.name=Flytande Yellorium
 fluid.tile.cyanite=Flytande Cyanit
+tile.fluid.cyanite.still.name=Flytande Cyanit
 fluid.tile.blutonium=Flytande Blutonium
+tile.fluid.blutonium.still.name=Flytande Blutonium
 fluid.steam=Ånga
