--- a/src/main/resources/assets/bigreactors/lang/zh_CN.lang
+++ b/src/main/resources/assets/bigreactors/lang/zh_CN.lang
@@ -50,6 +50,9 @@ item.bucket.yellorium.name=液态黄铀桶
 fluid.tile.water=水
 fluid.tile.lava=岩浆
 fluid.tile.yellorium=液态黄铀
+tile.fluid.yellorium.still.name=液态黄铀
 fluid.tile.cyanite=液态蓝晶
+tile.fluid.cyanite.still.name=液态蓝晶
 fluid.tile.blutonium=液态蓝钚
+tile.fluid.blutonium.still.name=液态蓝钚
 fluid.steam=蒸汽
