--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -5,54 +5,57 @@ itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Йелоритовая руда
-tile.brMetal.0.name=Блок йеллориума
-tile.brMetal.1.name=Блок цианита
-tile.brMetal.2.name=Блок графита
-tile.brMetal.3.name=Блок блутония
-tile.yelloriumFuelRod.name=Топливный стержень
-tile.blockReactorControlRod.name=Блок управления стержнями
-tile.multiblockGlass.0.name=Стекло реактора
-tile.multiblockGlass.1.name=Стекло турбины
+tile.brMetal.0.name=Йеллориумовый блок
+tile.brMetal.1.name=Цианитовый блок
+tile.brMetal.2.name=Графитовый блок
+tile.brMetal.3.name=Блутониевый блок
+tile.yelloriumFuelRod.name=Йеллориумовый топливный стержень
+tile.multiblockGlass.0.name=Реакторное стекло
+tile.multiblockGlass.1.name=Турбинное стекло
 tile.blockReactorRedstonePort.name=Красный порт реактора
-tile.blockReactorPart.0.name=Корпус реактора
-tile.blockReactorPart.1.name=Блок управления реактором
-tile.blockReactorPart.2.name=Розетка реактора
-tile.blockReactorPart.3.name=Порт доступа
-tile.blockReactorPart.4.name=RedNet порт
-tile.blockReactorPart.5.name=Компьютерный порт реактора
-tile.blockReactorPart.6.name=Порт охлаждения
+tile.blockReactorPart.0.name=Реакторный корпус
+tile.blockReactorPart.1.name=Реакторный контроллер
+tile.blockReactorPart.2.name=Реакторный контролирующий стержень
+tile.blockReactorPart.3.name=Реакторная розетка
+tile.blockReactorPart.4.name=Реакторный порт доступа
+tile.blockReactorPart.6.name=Реакторный RedNet порт
+tile.blockReactorPart.7.name=Компьютерный порт реактора
+tile.blockReactorPart.5.name=Реакторный порт охлаждения
 tile.blockRadiothermalGen.0=Радиотепловой генератор
-tile.blockBRSmallMachine.0.name=Переработчик цианита
-tile.blockTurbinePart.0.name=Корпус турбины
-tile.blockTurbinePart.1.name=Порт управления турбиной
-tile.blockTurbinePart.2.name=Порт питания турбины
-tile.blockTurbinePart.3.name=Порт жидкостей
-tile.blockTurbinePart.4.name=Роторный подшипник
+tile.blockBRDevice.0.name=Переработчик цианита
+tile.blockTurbinePart.0.name=Турбинный корпус
+tile.blockTurbinePart.1.name=Турбинный контроллер
+tile.blockTurbinePart.2.name=Турбинный порт питания
+tile.blockTurbinePart.3.name=Турбинный порт жидкостей
+tile.blockTurbinePart.4.name=Подшипник ротора турбины
 tile.blockTurbinePart.5.name=Компьютерный порт турбины
-tile.blockTurbineRotorPart.0.name=Вал ротора
-tile.blockTurbineRotorPart.1.name=Лезвие ротора
-tile.blockMBCreativePart.0.name=Творческий порт охлаждения
-tile.blockMBCreativePart.1.name=Творческий генератор пара турбины
+tile.blockTurbineRotorPart.0.name=Вал ротора турбины
+tile.blockTurbineRotorPart.1.name=Лезвие ротора турбины
+tile.blockMBCreativePart.0.name=Реакторный творческий порт охлаждения
+tile.blockMBCreativePart.1.name=Турбинный творческий генератор пара
 
 # Items
-item.ingotYellorium.name=Слиток йеллориума
-item.ingotCyanite.name=Слиток цианита
-item.ingotGraphite.name=Слиток графита
-item.ingotBlutonium.name=Слиток блутония
-item.dustYellorium.name=Пыль йеллориума
-item.dustCyanite.name=Пыль цианита
-item.dustBlutonium.name=Пыль блутония
-item.dustGraphite.name=Пыль графита
-item.bucket.cyanite.name=Ведро цианита
-item.bucket.yellorium.name=Ведро йеллориума
+item.ingotYellorium.name=Йеллориумовый слиток
+item.ingotCyanite.name=Цианитовый слиток
+item.ingotGraphite.name=Графитовый слиток
+item.ingotBlutonium.name=Блутониевый слиток
+item.dustYellorium.name=Йеллориумовая пыль
+item.dustCyanite.name=Цианитовая пыль
+item.dustBlutonium.name=Блутониевая пыль
+item.dustGraphite.name=Графитовая пыль
+item.bucket.cyanite.name=Ведро жидкого цианита
+item.bucket.yellorium.name=Ведро жидкого йеллориума
+item.beefDebugTool.name=Инструмент диагностики BeefTronic™
 
 # Fluids
 fluid.tile.water=Вода
 fluid.tile.lava=Лава
 fluid.tile.yellorium=Жидкий йеллориум
-tile.fluid.yellorium.still.name=Жидкий йеллориум
 fluid.tile.cyanite=Жидкий цианит
-tile.fluid.cyanite.still.name=Жидкий цианит
 fluid.tile.blutonium=Жидкий блутоний
-tile.fluid.blutonium.still.name=Жидкий блутоний
 fluid.steam=Пар
+
+# Placeable Fluids
+tile.fluid.yellorium.still.name=Жидкий йеллориум
+tile.fluid.cyanite.still.name=Жидкий цианит
+tile.fluid.blutonium.still.name=Жидкий блутоний
