--- a/src/main/resources/assets/bigreactors/lang/es_SP.lang
+++ b/src/main/resources/assets/bigreactors/lang/es_SP.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=Bloque de Yelorio
 tile.brMetal.1.name=Bloque de Cyanite
 tile.brMetal.2.name=Bloque de Grafito
 tile.brMetal.3.name=Bloque de Blutonio
+tile.brMetal.4.name=Bloque de Ludicrio
 tile.yelloriumFuelRod.name=Barra de Combustible de Yelorio
 tile.multiblockGlass.0.name=Cristal del Reactor
 tile.multiblockGlass.1.name=Cristal de la Turbine
