--- a/src/main/resources/assets/bigreactors/lang/ko_KR.lang
+++ b/src/main/resources/assets/bigreactors/lang/ko_KR.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=옐로리움 블럭
 tile.brMetal.1.name=싸이언이트 블럭
 tile.brMetal.2.name=그라파이트 블럭
 tile.brMetal.3.name=블루토니움 블럭
+tile.brMetal.4.name=Ludicrite 블럭
 tile.yelloriumFuelRod.name=옐로리움 연료봉
 tile.multiblockGlass.0.name=원자로 유리
 tile.multiblockGlass.1.name=터빈 유리
