--- a/src/main/resources/assets/bigreactors/lang/nl_NL.lang
+++ b/src/main/resources/assets/bigreactors/lang/nl_NL.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=Gelium Blok
 tile.brMetal.1.name=Cyanide Blok
 tile.brMetal.2.name=Grafeen Blok
 tile.brMetal.3.name=Blautonium Blok
+tile.brMetal.4.name=Ludicrite Blok
 tile.yelloriumFuelRod.name=Gelium Brandstofstaaf
 tile.multiblockGlass.0.name=Reactorglas
 tile.multiblockGlass.1.name=Turbineglas
