--- a/src/main/resources/assets/bigreactors/lang/pl_PL.lang
+++ b/src/main/resources/assets/bigreactors/lang/pl_PL.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=Blok Yellorium
 tile.brMetal.1.name=Blok Cyanitu
 tile.brMetal.2.name=Blok Grafitu
 tile.brMetal.3.name=Blok Blutonium
+tile.brMetal.4.name=Blok Ludicritu
 tile.yelloriumFuelRod.name=Reaktor: pręt paliwowy
 tile.multiblockGlass.0.name=Reaktor: szyba
 tile.multiblockGlass.1.name=Turbina: szyba
