--- a/src/main/resources/assets/bigreactors/lang/pt_BR.lang
+++ b/src/main/resources/assets/bigreactors/lang/pt_BR.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=Bloco de Yellorium
 tile.brMetal.1.name=Bloco de Cyanite
 tile.brMetal.2.name=Bloco de Grafite
 tile.brMetal.3.name=Bloco de Blutonium
+tile.brMetal.4.name=Bloco de Ludicrite
 tile.yelloriumFuelRod.name=Haste de Combustível de Yellorium
 tile.multiblockGlass.0.name=Vidro do Reator
 tile.multiblockGlass.1.name=Vidro da Turbina
