--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=Йеллориумовый блок
 tile.brMetal.1.name=Цианитовый блок
 tile.brMetal.2.name=Графитовый блок
 tile.brMetal.3.name=Блутониевый блок
+tile.brMetal.4.name=Ludicrite блок
 tile.yelloriumFuelRod.name=Йеллориумовый топливный стержень
 tile.multiblockGlass.0.name=Реакторное стекло
 tile.multiblockGlass.1.name=Турбинное стекло
