--- a/src/main/resources/assets/bigreactors/lang/zh_CN.lang
+++ b/src/main/resources/assets/bigreactors/lang/zh_CN.lang
@@ -9,6 +9,7 @@ tile.brMetal.0.name=黄铀块
 tile.brMetal.1.name=蓝晶块
 tile.brMetal.2.name=石墨块
 tile.brMetal.3.name=蓝钚块
+tile.brMetal.4.name=Ludicrite block
 tile.yelloriumFuelRod.name=黄铀燃料棒
 tile.multiblockGlass.0.name=反应堆玻璃
 tile.multiblockGlass.1.name=涡轮机玻璃
