Fix #339 - Fix ludicrite recipes and add ludicrite ingots/dusts for compatibility; add TE recipes for pulverizing ludicrite ingots

--- a/src/main/resources/assets/bigreactors/lang/de_DE.lang
+++ b/src/main/resources/assets/bigreactors/lang/de_DE.lang
@@ -40,10 +40,12 @@ item.ingotYellorium.name=Yelloriumbarren
 item.ingotCyanite.name=Cyanitbarren
 item.ingotGraphite.name=Graphitbarren
 item.ingotBlutonium.name=Blutoniumbarren
+item.ingotLudicrite.name=Ludicritbarren
 item.dustYellorium.name=Yelloriumstaub
 item.dustCyanite.name=Cyanitstaub
 item.dustBlutonium.name=Blutoniumstaub
 item.dustGraphite.name=Graphitstaub
+item.dustLudicrite.name=Ludicritstaub
 item.bucket.cyanite.name=Eimer mit flüssigem Cyanit
 item.bucket.yellorium.name=Eimer mit flüssigem Yellorium
 
