--- a/src/main/resources/assets/bigreactors/lang/en_US.lang
+++ b/src/main/resources/assets/bigreactors/lang/en_US.lang
@@ -40,10 +40,12 @@ item.ingotYellorium.name=Yellorium Ingot
 item.ingotCyanite.name=Cyanite Ingot
 item.ingotGraphite.name=Graphite Bar
 item.ingotBlutonium.name=Blutonium Ingot
+item.ingotLudicrite.name=Ludicrite Ingot
 item.dustYellorium.name=Yellorium Dust
 item.dustCyanite.name=Cyanite Dust
 item.dustBlutonium.name=Blutonium Dust
 item.dustGraphite.name=Graphite Dust
+item.dustLudicrite.name=Ludicrite Dust
 item.bucket.cyanite.name=Fluid Cyanite Bucket
 item.bucket.yellorium.name=Fluid Yellorium Bucket
 item.beefDebugTool.name=BeefTronic™ Diagnostics Tool
