--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -40,10 +40,12 @@ item.ingotYellorium.name=Йеллориумовый слиток
 item.ingotCyanite.name=Цианитовый слиток
 item.ingotGraphite.name=Графитовый слиток
 item.ingotBlutonium.name=Блутониевый слиток
+item.ingotLudicrite.name=Ludicrite слиток
 item.dustYellorium.name=Йеллориумовая пыль
 item.dustCyanite.name=Цианитовая пыль
 item.dustBlutonium.name=Блутониевая пыль
 item.dustGraphite.name=Графитовая пыль
+item.dustLudicrite.name=Ludicrite пыль
 item.bucket.cyanite.name=Ведро жидкого цианита
 item.bucket.yellorium.name=Ведро жидкого йеллориума
 item.beefDebugTool.name=Инструмент диагностики BeefTronic™
