--- a/src/main/resources/assets/bigreactors/lang/zh_CN.lang
+++ b/src/main/resources/assets/bigreactors/lang/zh_CN.lang
@@ -40,10 +40,12 @@ item.ingotYellorium.name=黄铀锭
 item.ingotCyanite.name=蓝晶锭
 item.ingotGraphite.name=石墨棒
 item.ingotBlutonium.name=蓝钚锭
+item.ingotLudicrite.name=Ludicrite Ingot
 item.dustYellorium.name=黄铀粉
 item.dustCyanite.name=蓝晶粉
 item.dustBlutonium.name=蓝钚粉
 item.dustGraphite.name=石墨粉
+item.dustLudicrite.name=Ludicrite Dust
 item.bucket.cyanite.name=液态蓝晶桶
 item.bucket.yellorium.name=液态黄铀桶
 item.beefDebugTool.name=BeefTronic™公司故障排除工具
