--- a/src/main/resources/assets/bigreactors/lang/ko_KR.lang
+++ b/src/main/resources/assets/bigreactors/lang/ko_KR.lang
@@ -40,10 +40,12 @@ item.ingotYellorium.name=옐로리움 주괴
 item.ingotCyanite.name=싸이언이트 주괴
 item.ingotGraphite.name=그라파이트 바
 item.ingotBlutonium.name=블루토니움 주괴
+item.ingotLudicrite.name=Ludicrite 주괴
 item.dustYellorium.name=옐로리움 가루
 item.dustCyanite.name=싸이언이트 가루
 item.dustBlutonium.name=블루토니움 가루
 item.dustGraphite.name=그라파이트 가루
+item.dustLudicrite.name=Ludicrite 가루
 item.bucket.cyanite.name=액체 싸이언이트 양동이
 item.bucket.yellorium.name=액체 옐로리움 양동이
 
