--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -9,7 +9,7 @@ tile.brMetal.0.name=Йеллориумовый блок
 tile.brMetal.1.name=Цианитовый блок
 tile.brMetal.2.name=Графитовый блок
 tile.brMetal.3.name=Блутониевый блок
-tile.brMetal.4.name=Ludicrite блок
+tile.brMetal.4.name=Лудикритовый блок
 tile.yelloriumFuelRod.name=Йеллориумовый топливный стержень
 tile.multiblockGlass.0.name=Реакторное стекло
 tile.multiblockGlass.1.name=Турбинное стекло
@@ -40,12 +40,12 @@ item.ingotYellorium.name=Йеллориумовый слиток
 item.ingotCyanite.name=Цианитовый слиток
 item.ingotGraphite.name=Графитовый слиток
 item.ingotBlutonium.name=Блутониевый слиток
-item.ingotLudicrite.name=Ludicrite слиток
+item.ingotLudicrite.name=Лудикритовый слиток
 item.dustYellorium.name=Йеллориумовая пыль
 item.dustCyanite.name=Цианитовая пыль
 item.dustBlutonium.name=Блутониевая пыль
 item.dustGraphite.name=Графитовая пыль
-item.dustLudicrite.name=Ludicrite пыль
+item.dustLudicrite.name=Лудикритовая пыль
 item.bucket.cyanite.name=Ведро жидкого цианита
 item.bucket.yellorium.name=Ведро жидкого йеллориума
 item.beefDebugTool.name=Инструмент диагностики BeefTronic™
