--- a/src/main/resources/assets/bigreactors/lang/ko_KR.lang
+++ b/src/main/resources/assets/bigreactors/lang/ko_KR.lang
@@ -9,7 +9,7 @@ tile.brMetal.0.name=옐로리움 블럭
 tile.brMetal.1.name=싸이언이트 블럭
 tile.brMetal.2.name=그라파이트 블럭
 tile.brMetal.3.name=블루토니움 블럭
-tile.brMetal.4.name=Ludicrite 블럭
+tile.brMetal.4.name=루디크라이트 블럭
 tile.yelloriumFuelRod.name=옐로리움 연료봉
 tile.multiblockGlass.0.name=원자로 유리
 tile.multiblockGlass.1.name=터빈 유리
@@ -40,12 +40,12 @@ item.ingotYellorium.name=옐로리움 주괴
 item.ingotCyanite.name=싸이언이트 주괴
 item.ingotGraphite.name=그라파이트 바
 item.ingotBlutonium.name=블루토니움 주괴
-item.ingotLudicrite.name=Ludicrite 주괴
+item.ingotLudicrite.name=루디크라이트 주괴
 item.dustYellorium.name=옐로리움 가루
 item.dustCyanite.name=싸이언이트 가루
 item.dustBlutonium.name=블루토니움 가루
 item.dustGraphite.name=그라파이트 가루
-item.dustLudicrite.name=Ludicrite 가루
+item.dustLudicrite.name=루디크라이트 가루
 item.bucket.cyanite.name=액체 싸이언이트 양동이
 item.bucket.yellorium.name=액체 옐로리움 양동이
 
