Fix #364: Change unlocalized name of multiblock glass to brMultiblockGlass to prevent conflicts (note: does not change texture name)

--- a/src/main/resources/assets/bigreactors/lang/cs_CZ.lang
+++ b/src/main/resources/assets/bigreactors/lang/cs_CZ.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Grafitový blok
 tile.brMetal.3.name=Blutóniový blok
 tile.brMetal.4.name=Ludikritový blok
 tile.yelloriumFuelRod.name=Yelloriová palivová tyč
-tile.multiblockGlass.0.name=Reaktorové sklo
-tile.multiblockGlass.1.name=Turbínové sklo
+tile.brMultiblockGlass.0.name=Reaktorové sklo
+tile.brMultiblockGlass.1.name=Turbínové sklo
 tile.blockReactorRedstonePort.name=Reaktorový ruditový přesuvník
 tile.blockReactorPart.0.name=Reaktorový plášť
 tile.blockReactorPart.1.name=Reaktorový ovladač
