--- a/src/main/resources/assets/bigreactors/lang/de_DE.lang
+++ b/src/main/resources/assets/bigreactors/lang/de_DE.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Graphitblock
 tile.brMetal.3.name=Blutoniumblock
 tile.brMetal.4.name=Ludicritblock
 tile.yelloriumFuelRod.name=Yelloriumbrennstab
-tile.multiblockGlass.0.name=Reaktorglas
-tile.multiblockGlass.1.name=Turbinenglas
+tile.brMultiblockGlass.0.name=Reaktorglas
+tile.brMultiblockGlass.1.name=Turbinenglas
 tile.blockReactorRedstonePort.name=Reaktor-Redstoneanschluss
 tile.blockReactorPart.0.name=Reaktorgehäuse
 tile.blockReactorPart.1.name=Reaktorsteuerung
