--- a/src/main/resources/assets/bigreactors/lang/en_US.lang
+++ b/src/main/resources/assets/bigreactors/lang/en_US.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Graphite Block
 tile.brMetal.3.name=Blutonium Block
 tile.brMetal.4.name=Ludicrite Block
 tile.yelloriumFuelRod.name=Yellorium Fuel Rod
-tile.multiblockGlass.0.name=Reactor Glass
-tile.multiblockGlass.1.name=Turbine Glass
+tile.brMultiblockGlass.0.name=Reactor Glass
+tile.brMultiblockGlass.1.name=Turbine Glass
 tile.blockReactorRedstonePort.name=Reactor Redstone Port
 tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
