--- a/src/main/resources/assets/bigreactors/lang/es_SP.lang
+++ b/src/main/resources/assets/bigreactors/lang/es_SP.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Bloque de Grafito
 tile.brMetal.3.name=Bloque de Blutonio
 tile.brMetal.4.name=Bloque de Ludicrio
 tile.yelloriumFuelRod.name=Barra de Combustible de Yelorio
-tile.multiblockGlass.0.name=Cristal del Reactor
-tile.multiblockGlass.1.name=Cristal de la Turbine
+tile.brMultiblockGlass.0.name=Cristal del Reactor
+tile.brMultiblockGlass.1.name=Cristal de la Turbine
 tile.blockReactorRedstonePort.name=Puerto de Redstone del Reactor
 tile.blockReactorPart.0.name=Caja del Reactor
 tile.blockReactorPart.1.name=Controlador del Reactor
