--- a/src/main/resources/assets/bigreactors/lang/ko_KR.lang
+++ b/src/main/resources/assets/bigreactors/lang/ko_KR.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=그라파이트 블럭
 tile.brMetal.3.name=블루토니움 블럭
 tile.brMetal.4.name=루디크라이트 블럭
 tile.yelloriumFuelRod.name=옐로리움 연료봉
-tile.multiblockGlass.0.name=원자로 유리
-tile.multiblockGlass.1.name=터빈 유리
+tile.brMultiblockGlass.0.name=원자로 유리
+tile.brMultiblockGlass.1.name=터빈 유리
 tile.blockReactorRedstonePort.name=원자로 레드스톤 포트
 tile.blockReactorPart.0.name=원자로 케이싱
 tile.blockReactorPart.1.name=원자로 제어장치
