--- a/src/main/resources/assets/bigreactors/lang/nl_NL.lang
+++ b/src/main/resources/assets/bigreactors/lang/nl_NL.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Grafeen Blok
 tile.brMetal.3.name=Blautonium Blok
 tile.brMetal.4.name=Ludicrite Blok
 tile.yelloriumFuelRod.name=Gelium Brandstofstaaf
-tile.multiblockGlass.0.name=Reactorglas
-tile.multiblockGlass.1.name=Turbineglas
+tile.brMultiblockGlass.0.name=Reactorglas
+tile.brMultiblockGlass.1.name=Turbineglas
 tile.blockReactorRedstonePort.name=Reactorredstonepoort
 tile.blockReactorPart.0.name=Reactorbehuizing
 tile.blockReactorPart.1.name=Reactorcontroller
