--- a/src/main/resources/assets/bigreactors/lang/pl_PL.lang
+++ b/src/main/resources/assets/bigreactors/lang/pl_PL.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Blok Grafitu
 tile.brMetal.3.name=Blok Blutonium
 tile.brMetal.4.name=Blok Ludicritu
 tile.yelloriumFuelRod.name=Reaktor: pręt paliwowy
-tile.multiblockGlass.0.name=Reaktor: szyba
-tile.multiblockGlass.1.name=Turbina: szyba
+tile.brMultiblockGlass.0.name=Reaktor: szyba
+tile.brMultiblockGlass.1.name=Turbina: szyba
 tile.blockReactorRedstonePort.name=Reaktor: kontroler sygnału
 tile.blockReactorPart.0.name=Reaktor: osłona
 tile.blockReactorPart.1.name=Reaktor: gniazdo kontrolne
