--- a/src/main/resources/assets/bigreactors/lang/pt_BR.lang
+++ b/src/main/resources/assets/bigreactors/lang/pt_BR.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Bloco de Grafite
 tile.brMetal.3.name=Bloco de Blutonium
 tile.brMetal.4.name=Bloco de Ludicrite
 tile.yelloriumFuelRod.name=Haste de Combustível de Yellorium
-tile.multiblockGlass.0.name=Vidro do Reator
-tile.multiblockGlass.1.name=Vidro da Turbina
+tile.brMultiblockGlass.0.name=Vidro do Reator
+tile.brMultiblockGlass.1.name=Vidro da Turbina
 tile.blockReactorRedstonePort.name=Porta de Redstone do Reator
 tile.blockReactorPart.0.name=Alojamento do Reator
 tile.blockReactorPart.1.name=Controlador do Reator
