--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Графитовый блок
 tile.brMetal.3.name=Блутониевый блок
 tile.brMetal.4.name=Лудикритовый блок
 tile.yelloriumFuelRod.name=Йеллориумовый топливный стержень
-tile.multiblockGlass.0.name=Реакторное стекло
-tile.multiblockGlass.1.name=Турбинное стекло
+tile.brMultiblockGlass.0.name=Реакторное стекло
+tile.brMultiblockGlass.1.name=Турбинное стекло
 tile.blockReactorRedstonePort.name=Красный порт реактора
 tile.blockReactorPart.0.name=Реакторный корпус
 tile.blockReactorPart.1.name=Реакторный контроллер
