--- a/src/main/resources/assets/bigreactors/lang/sv_SE.lang
+++ b/src/main/resources/assets/bigreactors/lang/sv_SE.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=Grafitblock
 tile.brMetal.3.name=Blutoniumblock
 tile.brMetal.4.name=Ludicriteblock
 tile.yelloriumFuelRod.name=Yellorium Bränslestav
-tile.multiblockGlass.0.name=Reaktorglas
-tile.multiblockGlass.1.name=Turbinglas
+tile.brMultiblockGlass.0.name=Reaktorglas
+tile.brMultiblockGlass.1.name=Turbinglas
 tile.blockReactorRedstonePort.name=Reaktor Rödstensport
 tile.blockReactorPart.0.name=Reaktorhölje
 tile.blockReactorPart.1.name=Reaktorkontroller
