--- a/src/main/resources/assets/bigreactors/lang/zh_CN.lang
+++ b/src/main/resources/assets/bigreactors/lang/zh_CN.lang
@@ -11,8 +11,8 @@ tile.brMetal.2.name=石墨块
 tile.brMetal.3.name=蓝钚块
 tile.brMetal.4.name=纯镥块
 tile.yelloriumFuelRod.name=黄铀燃料棒
-tile.multiblockGlass.0.name=反应堆玻璃
-tile.multiblockGlass.1.name=涡轮机玻璃
+tile.brMultiblockGlass.0.name=反应堆玻璃
+tile.brMultiblockGlass.1.name=涡轮机玻璃
 tile.blockReactorRedstonePort.name=反应堆红石端口
 tile.blockReactorPart.0.name=反应堆外壳
 tile.blockReactorPart.1.name=反应堆控制器
