--- a/src/main/resources/assets/bigreactors/lang/en_US.lang
+++ b/src/main/resources/assets/bigreactors/lang/en_US.lang
@@ -62,3 +62,28 @@ fluid.steam=Steam
 tile.fluid.yellorium.still.name=Fluid Yellorium
 tile.fluid.cyanite.still.name=Fluid Cyanite
 tile.fluid.blutonium.still.name=Fluid Blutonium
+
+# Tooltips
+beefDebugTool.debuginfo=Right-click a block to show debug info
+beefDebugTool.queriesserver=Queries on server, by default.
+beefDebugTool.queryclient=Query on client
+
+# Messages
+beefDebugTool.canonicalore=[%s] Canonical ore name for %s: %s
+beefDebugTool.allorenames=[%s] All ore names (%d):
+
+# GUI
+gui.controlrod=Control Rod
+gui.controlrod.name=Name:
+gui.controlrod.set=Set
+gui.controlrod.rodinsertion=Rod Insertion
+gui.controlrod.changeinsertion=Change the control rod's insertion.
+gui.controlrod.higherinsertion=Higher insertion slows reaction rate.
+gui.controlrod.lowerreaction=Lower reaction rates reduce heat,
+gui.controlrod.energyradand=energy, radiation output, and
+gui.controlrod.fuelcons=fuel consumption.
+gui.controlrod.insertrod=Insert Rod
+gui.controlrod.retractrod=Retract Rod
+gui.controlrod.increaseinser=Increase insertion by 10.
+gui.controlrod.reduceinser=Reduce insertion by 10.
+gui.controlrod.changeallrods=Ctrl: Change ALL Rods
