Some translate fix

--- a/src/main/resources/assets/bigreactors/lang/fi_FI.lang
+++ b/src/main/resources/assets/bigreactors/lang/fi_FI.lang
@@ -1,4 +1,4 @@
-# Big Reactors Language File - Finish (Suomi)
+# Big Reactors Language File - Finnish (Suomi)
 # @author  Syorito Hatsuki
 
 itemGroup.BigReactors=Big Reactors
