Updated German translation
added placeable fluid section

--- a/src/main/resources/assets/bigreactors/lang/de_DE.lang
+++ b/src/main/resources/assets/bigreactors/lang/de_DE.lang
@@ -59,3 +59,8 @@ tile.fluid.cyanite.still.name=Flüssiges Cyanit
 fluid.tile.blutonium=Flüssiges Blutonium
 tile.fluid.blutonium.still.name=Flüssiges Blutonium
 fluid.steam=Dampf
+
+# Placeable Fluids
+tile.fluid.yellorium.still.name=Flüssiges Yellorium
+tile.fluid.cyanite.still.name=Flüssiges Cyanit
+tile.fluid.blutonium.still.name=Flüssiges Blutonium
